--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -17,7 +17,6 @@ categories:
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 == Kafka and Event Streaming
-
 * A trio of articles from Zeinab Dashti about exactly-once processing in Kafka, using the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-kafka-transactions-idempotent-writes-09fe1f75bdab[Transactions], the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-outbox-pattern-f08fd640f683[Outbox Pattern], and the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-listen-to-yourself-pattern-0add785f988a[Listen-to-Yourself Pattern]
 * Another nice post from Stefan Kecskes, this time exploring https://skey.uk/post/kraft-the-kafka-raft/[what KRaft is and what the migration process looks like].
 * An interesting blog post from last year in which Andy Pearce gives https://www.andy-pearce.com/blog/posts/2024/Jun/blazingmq-introduction/[an introduction] to https://bloomberg.github.io/blazingmq/[BlazingMQ].
@@ -28,7 +27,6 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 (If you struggle reading the grey-on-black text, opening it in Safari and using the Reader view works well).
 
 == Stream Processing
-
 * 🔥 Regularly featured in these roundups in recent months is Yennick Trevels, who this month brings us a very cool https://kafkastreamsfieldguide.com/tools/interactive-architecture[Interactive Kafka Streams Architecture Simulation].
 * Expedia's Vishal Sharma writes about tips for https://medium.com/expedia-group-tech/colocating-input-partitions-with-kafka-streams-when-consuming-multiple-topics-sub-topology-matters-f92da955c905[consuming from multiple topics with Kafka Streams].
 * MongoDB are previewing built-in https://medium.com/towards-data-engineering/atlas-stream-processing-iceberg-private-preview-bfc163e09522[streaming processing capabilities] that can output to Iceberg tables directly.
@@ -42,7 +40,7 @@ The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kub
 ** https://www.p99conf.io/session/building-planet-scale-streaming-apps-proven-strategies-with-apache-flink/[Building Planet-Scale Streaming Apps: Proven Strategies with Apache Flink]
 ** https://www.p99conf.io/session/apache-flink-at-scale-7x-cost-reduction-in-real-time-deduplication/[Apache Flink at Scale: 7x Cost Reduction in Real-Time Deduplication]
 * Konstantinos Karavitis has an interesting post about the design pattern known as https://www.linkedin.com/pulse/applying-hexagonal-architecture-apache-flink-konstantinos-karavitis-zx6zf/["hexagonal architecture"] and its application when https://medium.com/@kkaravitis/pricing-advisor-a-practical-architecture-for-real-time-dynamic-pricing-poc-1ab1d3dc0afa[building microservices with Flink].
-* A https://blog.dataengineerthings.org/delta-join-what-even-is-that-b8306c36f1ac[summary] from Jennifer Ebe about Delta Joins, introduced into Flink in https://cwiki.apache.org/confluence/display/FLINK/FLIP-486%3A+Introduce+A+New+DeltaJoin[FLIP-486], and covered in more detail in https://www.alibabacloud.com/blog/the-delta-join-in-apache-flink-architectural-decoupling-for-hyper-scale-stream-processing_602645[this blog post] from Alibaba.
+* A https://blog.dataengineerthings.org/delta-join-what-even-is-that-b8306c36f1ac[summary] from Jennifer Ebe about Delta Joins, introduced into Flink in https://cwiki.apache.org/confluence/display/FLINK/FLIP-486%3A+Introduce+A+New+DeltaJoin[FLIP-486] (with support for it https://fluss.apache.org/blog/releases/0.8/#delta-join[added in Fluss 0.8]), and covered in more detail in https://www.alibabacloud.com/blog/the-delta-join-in-apache-flink-architectural-decoupling-for-hyper-scale-stream-processing_602645[this blog post] from Alibaba.
 * Rion Williams is seeking feedback from the community on his idea of a https://rion.io/2025/11/05/exploring-dynamic-sink-routing-in-apache-flink-via-demultiplexingsink/[DemultiplexingSink].
 * I've written https://rmoff.net/2025/08/18/kafka-to-iceberg-exploring-the-options/#_how_many_topics_do_you_have[previously] about the challenge of streaming data from multiple sources to multiple Iceberg tables with Flink; Apple's Swapna Marru writes about how this is made easier with the new https://flink.apache.org/2025/11/11/from-stream-to-lakehouse-kafka-ingestion-with-the-flink-dynamic-iceberg-sink/[Flink Dynamic Iceberg Sink] in Iceberg 1.10.
 * Ayden Adair built a very cool Flink-powered candy bowl for Halloween, and https://www.youtube.com/watch?v=sz8aX5-l9s8[made a video] to show it off.
@@ -52,9 +50,10 @@ The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kub
 * A summary from Eran Stiller of Stripe's recent InfoQ talk about https://www.infoq.com/news/2025/11/stripe-zero-downtime-date-move/[migrating petabytes of data between systems with zero downtime].
 * Rene Schallner has a cool blog post about https://renerocks.ai/blog/2025-11-02--tigerfans/[using TigerBeetle to build a high-performance ticketing system].
 * Luis Medina and Ajit Koti from Netflix bring us the second part of a series about the real time distributed graph platform that they're building, and look at [https://netflixtechblog.medium.com/how-and-why-netflix-built-a-real-time-distributed-graph-part-2-building-a-scalable-storage-layer-ff4a8dbd3d1f].
-* A good recap from Rahul Joshi at Capital One of the https://medium.com/capital-one-tech/understanding-the-evolution-of-data-lakes-37d13b809be9[history of data lakes through to data lakehouses].
+* 🔥 https://www.uber.com/blog/i-o-observability-for-ubers-massive-petabyte-scale-data-lake/[Cool stuff from the team at Uber], detailing how they instrument I/O calls from Spark and other technologies and use Kafka and Pinot to store and monitor performance of a data lake that is petabytes in size.
+* A good recap from Rahul Joshi at Capital One of the https://medium.com/capital-one-tech/understanding-the-evolution-of-data-lakes-37d13b809be9[history of data lakes through to data lakehouses], along with https://medium.com/capital-one-tech/lakehouse-format-convergence-data-interoperability-b2f8be7c1c0b[an analysis of OTFs and their perhaps-inevitable convergence].
 Pair it with https://luminousmen.com/post/data-warehouse-data-lake-data-lakehouse-data-mesh-what-they-are-and-how-they-differ/[this] from Spotify's Kirill Bobrov for a second pass at the concepts.
-* Fascinating detail from Agoda's Save Pavanavimutti and Art Nanakorn about https://medium.com/agoda-engineering/how-agodas-multi-product-booking-engine-powers-seamless-travel-bookings-61fc6e746821[how the booking system works].
+* 🔥 Fascinating detail from Agoda's Save Pavanavimutti and Art Nanakorn about https://medium.com/agoda-engineering/how-agodas-multi-product-booking-engine-powers-seamless-travel-bookings-61fc6e746821[how the booking system works].
 * Nice overview from Fernando Franco of ways to https://newsletter.francofernando.com/p/scaling-the-data-storage-layer-in[scale the data storage layer in system design].
 * Gunnar Morling argues why https://www.morling.dev/blog/you-dont-need-kafka-just-use-postgres-considered-harmful/[it's more nuanced] than simply using Postgres to replace Kafka.
 * It's not often you see someone talking about migrating _off_ DuckDB, but that's exactly what Bauplan have done—Jacopo Tagliabue explains https://www.linkedin.com/pulse/duck-hunt-moving-bauplan-from-duckdb-datafusion-bauplanlabs-5plqc/[why Bauplan moved from DuckDB to DataFusion].
@@ -62,7 +61,6 @@ Pair it with https://luminousmen.com/post/data-warehouse-data-lake-data-lakehous
 * Ananth Packkildurai has https://www.dataengineeringweekly.com/p/engineering-growth-the-data-layers[a good article] about the data systems needed to support modern "go to market" operations including marketing and sales and taking into account various privacy laws.
 
 == Data Engineering, Pipelines, and CDC
-
 * Is it too meta, in a list of interesting links, to link to a list of links?
 I don't care, because https://blog.dataengineerthings.org/the-awesome-list-of-resources-for-analytics-engineering-6e5759eeaa39[this list] from Faruk Tufekci of resources for analytics engineers is really useful!
 * Detailed articles from Jan Zedníček looking at how to use dbt to https://janzednicek.cz/en/fabric-dbt-slowly-changing-dimension-scd-2-snapshots-and-check-strategy-in-dbt/[handle] and https://janzednicek.cz/en/fabric-dbt-how-i-build-gold-layer-dimensional-tables-scd2-in-data-projects/[implement] SCD2.
@@ -77,61 +75,61 @@ The https://github.com/hpgrahsl/streaming-lakehouse-playground/blob/main/README.
 * 🔥 If the above article from Datadog whet your appetite for what you can build with Kafka Connect, you'll love https://skey.uk/post/kafka-connectors-more-than-just-configs/[this practical and clear introduction to Kafka Connect] and its components and concepts from Stefan Kecskes.
 
 == Open Table Formats (OTF), Catalogs, Lakehouses etc.
+_Lots of links in this category this month!_
+_I've split out some of the technology-specific stuff into their own sections below._
+
+* Alexandre Bergere has https://medium.com/datalex/from-lakehouse-to-lakebase-why-databricks-buying-neon-changes-everything-ba4c1bcfa148[analysis] of Databrick's acquisition of Neon and what it means for their platform.
+* OTF bake-off blogs might be old-hat, but this one https://medium.com/@gabriel.io/f7b3a987bf54[comparing Iceberg/Delta/Hudi] from Gabriel Popa adds a new spin to it - data sovereignty requirements for Switzerland.
+* https://lists.apache.org/thread/cy6y5xf5gg8fr12pg64f77gxdrtv52fn[Discussion in the Apache community] about optimisation proposals for Parquet and how to move them forward within the project structures.
+* 🔥 Umesh Dangat and Toby Cole from Yelp with details of their https://aws.amazon.com/blogs/big-data/how-yelp-modernized-its-data-infrastructure-with-a-streaming-lakehouse-on-aws/[adoption of Apache Paimon for their "streamhouse"].
+
+=== Apache Fluss
+
+_It's not a table format…it's not a lakehouse…it's…Fluss_ `¯\\_(ツ)_/¯`
+_(If you've got a better category or mental-model for me to bucket it into, let me know in the comments below!)_
+
+* Giannis Polyzos and Jark Wu have details of the https://fluss.apache.org/blog/releases/0.8/[Fluss 0.8 release]
 * A useful overview from Alibaba of https://www.alibabacloud.com/blog/apache-fluss-vs--apache-paimon-two-engines-for-the-real-time-lakehouse_602687[Fluss and Paimon]; what they do, where they overlap, how to decide if they fit your requirements.
-* https://medium.com/@manishankarravuri/how-iceberg-and-delta-lake-handle-deletes-a-deep-dive-fb6fe81010fa[How Iceberg and Delta Lake Handle Deletes: A Deep Dive]
-* https://medium.com/datalex/from-lakehouse-to-lakebase-why-databricks-buying-neon-changes-everything-ba4c1bcfa148[From Lakehouse to Lakebase: Why Databricks Buying Neon Changes Everything]
-* https://hudi.apache.org/blog/2025/11/25/apache-hudi-release-1-1-announcement/[Apache Hudi 1.1 is Here—Building the Foundation for the Next Generation of Lakehouse | Apache Hudi]
-* https://medium.com/@ayushtkn/basic-variant-datatype-support-in-apache-hive-with-apache-iceberg-93c8518fcea9[🧊 Basic Variant DataType Support in Apache Hive with Apache Iceberg]
-* https://medium.com/@gabriel.io/f7b3a987bf54[Iceberg vs Delta vs Hudi for Multi‑Cloud (Switzerland) | by Gabriel Popa | Nov, 2025 | Medium]
-* https://medium.com/@jagadeeshofficial789/understanding-concurrent-writes-in-apache-iceberg-the-hard-learned-lesson-b01d26f290c2[Understanding Concurrent Writes in Apache Iceberg: The Hard-Learned Lesson]
-* https://medium.com/capital-one-tech/lakehouse-format-convergence-data-interoperability-b2f8be7c1c0b[Lakehouse format convergence & data interoperability]
-* https://www.uber.com/en-GB/blog/i-o-observability-for-ubers-massive-petabyte-scale-data-lake/[I/O Observability for Uber’s Massive Petabyte-Scale Data Lake | Uber Blog]
-* https://jack-vanlightly.com/blog/2025/11/19/have-your-iceberg-cubed-not-sorted-meet-qbeast-the-otree-spatial-index[Have your Iceberg Cubed, Not Sorted: Meet Qbeast, the OTree Spatial Index — Jack Vanlightly]
-* https://lists.apache.org/thread/cy6y5xf5gg8fr12pg64f77gxdrtv52fn[[DISCUSS] Creating an Apache project for Parquet reader optimisations-Apache Mail Archives]
-* https://www.onehouse.ai/blog/announcing-spark-and-sql-on-the-onehouse-compute-runtime-with-quanton[Announcing Apache Spark™ and SQL on the Onehouse Compute Runtime with Quanton]
-+
---
-Onehouse have been shifting in recent months from their Hudi-only GTM recently to [also] an optimised Spark runtime, and have extended this to optimised Iceberg queries with Spark.
-Prompting a slightly-strange IMHO post from their founder on LI which I read as "we never said we were only a Hudi company, Hudi is OSS so you're welcome to use it, the community is there if you need support. And btw did I mention we've got an optimised Spark execution engine".
---
-* https://www.linkedin.com/posts/vinothchandar_apachehudi-xtable-opendata-share-7396231040702418944-_22f/?rcm=ACoAAAC2ckIBstmoM1I4uBi9Djg8B7e0JaBvqzQ[Post | LinkedIn]
-+
---
-Onehouse have been shifting in recent months from their Hudi-only GTM recently to [also] an optimised Spark runtime, and have extended this to optimised Iceberg queries with Spark.
-Prompting a slightly-strange IMHO post from their founder on LI which I read as "we never said we were only a Hudi company, Hudi is OSS so you're welcome to use it, the community is there if you need support. And btw did I mention we've got an optimised Spark execution engine".
---
-* https://www.onehouse.ai/blog/apache-iceberg-on-quanton-3x-faster-apache-spark-workloads[Apache Iceberg™ on Quanton: 3x Faster Apache Spark™ workloads]
-+
---
-Onehouse have been shifting in recent months from their Hudi-only GTM recently to [also] an optimised Spark runtime, and have extended this to optimised Iceberg queries with Spark.
-Prompting a slightly-strange IMHO post from their founder on LI which I read as "we never said we were only a Hudi company, Hudi is OSS so you're welcome to use it, the community is there if you need support. And btw did I mention we've got an optimised Spark execution engine".
---
-* https://db.cs.cmu.edu/events/future-data-apache-fluss-a-streaming-storage-for-real-time-lakehouse/[[Future Data] Apache Fluss: A Streaming Storage for Real-Time Lakehouse - Carnegie Mellon Database Group]
-* https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Advancing the Lakehouse with Apache Iceberg v3 on Databricks]
-* https://www.uber.com/blog/i-o-observability-for-ubers-massive-petabyte-scale-data-lake/?utm_source=tldrdata[I/O Observability for Uber’s Massive Petabyte-Scale Data Lake | Uber Blog]
-* https://aws.amazon.com/blogs/big-data/how-yelp-modernized-its-data-infrastructure-with-a-streaming-lakehouse-on-aws/[How Yelp modernized its data infrastructure with a streaming lakehouse on AWS | Amazon Web Services]
-* https://hudi.apache.org/blog/2025/11/12/deep-dive-into-hudis-indexing-subsystem-part-2-of-2/?utm_source=tldrdata[Deep Dive Into Hudi's Indexing Subsystem (Part 2 of 2) | Apache Hudi]
-* https://hudi.apache.org/blog/2025/11/07/how-freewheel-uses-apache-hudi-to-power-its-data-lakehouse/[How FreeWheel Uses Apache Hudi to Power Its Data Lakehouse | Apache Hudi]
-* https://fluss.apache.org/blog/taobao-practice/#streaming-storage-more-suitable-for-real-time-olap[How Taobao uses Apache Fluss (Incubating) for Real-Time Processing in Search and RecSys | Apache Fluss™ (Incubating)]
-* https://www.linkedin.com/posts/jarkwu_new-blog-post-how-would-you-like-your-iceberg-activity-7392227653434519552-au-Q/?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAphmqEBRzO76Lh0wv4Nq6eOgAqjTl076zY[Post | LinkedIn]
-* https://fluss.apache.org/blog/[Blog | Apache Fluss™ (Incubating)]
-* https://jack-vanlightly.com/blog/2025/11/5/how-would-you-like-your-iceberg-sir-stream-or-batch-ordered[How Would You Like Your Iceberg Sir? Stream or Batch Ordered? — Jack Vanlightly]
-* https://github.com/Snowflake-Labs/pg_lake[Snowflake-Labs/pg_lake: pg_lake: Postgres with Iceberg and data lake access]
-* https://engineering.prod.whoop.com/glacierbase/[Glacierbase: Managing Iceberg Schema Migrations at Scale | WHOOP Engineering]
-* https://www.linkedin.com/posts/marc-selwan-088a7342_icebergrest-explore-your-apache-iceberg-activity-7390418552450662400-ZP6i?utm_source=share&utm_medium=member_ios&rcm=ACoAAAC2ckIBstmoM1I4uBi9Djg8B7e0JaBvqzQ[iceberg.rest - Explore Your Apache Iceberg REST Catalog | Marc Selwan]
-* https://www.ssp.sh/brain/data-lake-file-formats/[Data Lake File Formats]
+* https://fluss.apache.org/blog/taobao-practice/[Real-world details of Fluss in action] in this blog from Xinyu Zhang and Lilei Wang at TaoBao, looking in detail at why they adopted it and how they use it.
+* 🔥 The https://db.cs.cmu.edu/seminars/fall2025/[Future Data Systems Seminar Series] from Carnegie Mellon University Database Research Group is a very cool free resource with weekly deep-dives from experts in the industry.
+https://db.cs.cmu.edu/events/future-data-apache-fluss-a-streaming-storage-for-real-time-lakehouse/[The lecture on 8th December] is from the original creator of Fluss, Jark Wu.
+All the talks are recorded and available online afterwards.
+
+=== Apache Iceberg
+
+* Two years ago one would have thought hell were freezing (Iceberg! freezing! geddit?!) over with https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Databricks announcing full support for Iceberg v3], but following the acquisition of Tabular and the wide adoption of Iceberg in the industry, it seems a pretty sensible move.
+* Two good Iceberg blogs from Jack Vanlightly this month.
+The first covers the nitty-gritty of a very real "rubber meets the road" integration question; if you're writing from Kafka to Iceberg, https://jack-vanlightly.com/blog/2025/11/5/how-would-you-like-your-iceberg-sir-stream-or-batch-ordered[how do you square the circle of choosing what kind of access to optimise the data layout] for?
+(Jark Wu has an https://www.linkedin.com/posts/jarkwu_new-blog-post-how-would-you-like-your-iceberg-activity-7392227653434519552-au-Q/[interesting reply to it here].)
+In his second post he looks at the idea of https://jack-vanlightly.com/blog/2025/11/19/have-your-iceberg-cubed-not-sorted-meet-qbeast-the-otree-spatial-index[OTree Spatial Indexes for Iceberg].
+* Cloudera's Ayush Saxena looks at how https://medium.com/@ayushtkn/basic-variant-datatype-support-in-apache-hive-with-apache-iceberg-93c8518fcea9[Apache Hive now supports Iceberg's implementation of the Varient data type].
+* A good writeup from Manishankar Ravuri examining https://medium.com/@manishankarravuri/how-iceberg-and-delta-lake-handle-deletes-a-deep-dive-fb6fe81010fa[how deletions are handled] in different versions of the Iceberg spec, and in Delta Lake.
+* The surest sign of solid adoption of a technology is when tools supporting its use spring up in parallel to the project itself.
+Jack Leitch from Whoop has written about https://engineering.prod.whoop.com/glacierbase/[Glacierbase, which they have written to manage schemas across their PBs of Iceberg tables].
+* Marc Selwan has written https://iceberg.rest[a cool front-end for the Iceberg Catalog, `iceberg.rest`].
+* This is amazing from Snowflake (a company not originally renowned for open source work): they've open-sourced https://github.com/Snowflake-Labs/pg_lake[pg_lake] which enables you to access Iceberg tables from within Postgres.
+Open source and open standards FTW!
+
+=== Apache Hudi
+
+* https://hudi.apache.org/blog/2025/11/25/apache-hudi-release-1-1-announcement/[Apache Hudi 1.1] has been released, Shiyan Xu has the details.
+* Interesting summary of a talk from ad-tech company FreeWheel about https://hudi.apache.org/blog/2025/11/07/how-freewheel-uses-apache-hudi-to-power-its-data-lakehouse/[their use of Hudi], including its replacement of a Spark/Presto/Clickhouse-based Lambda architecture.
+* Onehouse are https://www.linkedin.com/posts/vinothchandar_apachehudi-xtable-opendata-share-7396231040702418944-_22f/[definitely not pivoting away from Hudi], as they launch their https://www.onehouse.ai/blog/announcing-spark-and-sql-on-the-onehouse-compute-runtime-with-quanton[faster-Spark runtime, Quanton] with claimed performance improvements for https://www.onehouse.ai/blog/apache-iceberg-on-quanton-3x-faster-apache-spark-workloads[Spark/Iceberg (wait, what?) workloads] too.
+* A nice https://hudi.apache.org/blog/2025/10/29/deep-dive-into-hudis-indexing-subsystem-part-1-of-2/[two-part] https://hudi.apache.org/blog/2025/11/12/deep-dive-into-hudis-indexing-subsystem-part-2-of-2/[deep-dive] series about indexes in Hudi.
 
 == RDBMS
-* https://blog.dataengineerthings.org/sql-query-optimization-modern-techniques-and-best-practices-%EF%B8%8F-32db686d235d[🔧SQL Query Optimization: Modern Techniques and Best Practices⚙️]
-* https://medium.com/fresha-data-engineering/shrinking-me-softly-7836fdd1db76[Shrinking me softly]
-* https://www.crunchydata.com/blog/postgres-internals-hiding-in-plain-sight[Postgres Internals Hiding in Plain Sight | Crunchy Data Blog]
-* https://medium.com/trendyol-tech/ai-powered-postgresql-query-optimization-a-comprehensive-approach-a646950eb5a3[AI-Powered PostgreSQL Query Optimization: A Comprehensive Approach]
-* https://muratbuffalo.blogspot.com/2025/11/disaggregated-database-management.html[Disaggregated Database Management Systems]
-* https://boringsql.com/posts/regresql-testing-queries/?utm_source=hackernewsletter&utm_medium=email&utm_term=data[RegreSQL: Regression Testing for PostgreSQL Queries]
-* https://peter.eisentraut.org/blog/2025/11/11/waiting-for-sql-202y-group-by-all?utm_source=tldrdata[Waiting for SQL:202y: GROUP BY ALL]
-* https://duckdb.org/2025/11/12/announcing-duckdb-142[Announcing DuckDB 1.4.2 LTS]
-* https://www.p99conf.io/session/chatgpt-aint-got-on-me/[ChatGPT Ain't Got $%@& On Me!]
-* https://github.com/duckdb/pg_duckdb[duckdb/pg_duckdb: DuckDB-powered Postgres for high performance apps & analytics.]
+* Vlad Bokov has a good hands-on explainer of https://medium.com/fresha-data-engineering/shrinking-me-softly-7836fdd1db76[how Fresha reduced their 4TB Postgres database on RDS by 75%].
+* A handy reminder from Elizabeth Christensen about https://www.crunchydata.com/blog/postgres-internals-hiding-in-plain-sight[how to find your way around Postgres' catalog and system tables].
+* Useful https://muratbuffalo.blogspot.com/2025/11/disaggregated-database-management.html[notes] from Murat Demirbas summarising https://arxiv.org/pdf/2411.01269[a 2022 paper] on Disaggregated Database Management Systems.
+* 🔥 You do test your Postgres queries, right? Right?
+https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim Marek discusses his https://github.com/boringSQL/regresql[fork of RegreSQL] and how it can be used to test a bunch of stuff including performance and query plan regresssions.
+* The SQL standard working group has formally accepted a change to the SQL standard to https://peter.eisentraut.org/blog/2025/11/11/waiting-for-sql-202y-group-by-all[add support for `GROUP BY ALL`].
+* https://duckdb.org/2025/11/12/announcing-duckdb-142[DuckDB 1.4.2 LTS] adds https://duckdb.org/2025/11/12/announcing-duckdb-142#iceberg-improvements[support for insert, update, and delete] statements on Iceberg tables from DuckDB.
+* 🔥 I loved https://www.p99conf.io/session/chatgpt-aint-got-on-me/[this talk from Andy Pavlo] at P99 Conf about practical research done into optimising query execution using techniques including—but not limited—to LLMs.
+* In a similar vein, Alper Çiftçi from Trendyol writes about their experience https://medium.com/trendyol-tech/ai-powered-postgresql-query-optimization-a-comprehensive-approach-a646950eb5a3[[using AI to optimise Postgres queries].
+* Sometimes it doesn't need an LLM to figure out how to optimise your queries; Nimisha Vernekar has a good primer on https://blog.dataengineerthings.org/sql-query-optimization-modern-techniques-and-best-practices-%EF%B8%8F-32db686d235d[basic query optimisation techniques] that it would behove anyone working with SQL to understand.
+* Snowflake might have enabled access from Postgres to Iceberg with their open-source https://github.com/Snowflake-Labs/pg_lake[pg_lake] (see above), but DuckDB now has https://github.com/duckdb/pg_duckdb[pg_duckdb], with which you can use DuckDB from within Postgres and thus access not only Iceberg but the multitude of other sources and types of data that DuckDB can read.
+What a time to be alive in the data world 😁
 
 == General Data Stuff
 * https://towardsdatascience.com/why-im-making-the-switch-to-marimo-notebooks/[Why I’m Making the Switch to marimo Notebooks | Towards Data Science]
