--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -120,7 +120,8 @@ Open source and open standards FTW!
 == RDBMS
 * Vlad Bokov has a good hands-on explainer of https://medium.com/fresha-data-engineering/shrinking-me-softly-7836fdd1db76[how Fresha reduced their 4TB Postgres database on RDS by 75%].
 * A handy reminder from Elizabeth Christensen about https://www.crunchydata.com/blog/postgres-internals-hiding-in-plain-sight[how to find your way around Postgres' catalog and system tables].
-* Useful https://muratbuffalo.blogspot.com/2025/11/disaggregated-database-management.html[notes] from Murat Demirbas summarising https://arxiv.org/pdf/2411.01269[a 2022 paper] on Disaggregated Database Management Systems.
+* Useful https://muratbuffalo.blogspot.com/2025/11/disaggregated-database-management.html[notes] from Murat Demirbas discussing https://arxiv.org/pdf/2411.01269[a 2022 paper] on Disaggregated Database Management Systems.
+Murat also presented on the topic at InfoQ, and Steef-Jan Wiggers has written up https://www.infoq.com/news/2025/11/disaggregated-systems-qcon/[a summary of the talk].
 * 🔥 You do test your Postgres queries, right? Right?
 https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim Marek discusses his https://github.com/boringSQL/regresql[fork of RegreSQL] and how it can be used to test a bunch of stuff including performance and query plan regresssions.
 * The SQL standard working group has formally accepted a change to the SQL standard to https://peter.eisentraut.org/blog/2025/11/11/waiting-for-sql-202y-group-by-all[add support for `GROUP BY ALL`].
@@ -132,20 +133,20 @@ https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim M
 What a time to be alive in the data world 😁
 
 == General Data Stuff
-* https://towardsdatascience.com/why-im-making-the-switch-to-marimo-notebooks/[Why I’m Making the Switch to marimo Notebooks | Towards Data Science]
-* https://www.infoq.com/news/2025/11/disaggregated-systems-qcon/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=news[Parting the Clouds: The Rise of Disaggregated Systems by Murat Demirbas at QCon SF 2025]
-* https://github.com/singaraiona/rayforce[singaraiona/rayforce: Fast columnar database]
-* https://blog.cloudflare.com/18-november-2025-outage/[Cloudflare outage on November 18, 2025]
-* https://db.cs.cmu.edu/seminars/fall2025/[Future Data Systems Seminar Series - Fall 2025 - Carnegie Mellon Database Group]
-* https://www.p99conf.io/session/8x-better-than-protobuf-rethinking-serialization-for-data-pipelines/[8x Better Than Protobuf: Rethinking Serialization for Data Pipelines]
-* https://www.p99conf.io/session/xcapture-v3-efficient-always-on-thread-level-observability-with-ebpf/[xCapture v3: Efficient, Always-On Thread Level Observability with eBPF]
-* https://www.p99conf.io/session/timeseries-storage-at-ludicrous-speed/[Timeseries Storage at Ludicrous Speed]
-* https://www.p99conf.io/session/performance-insights-beyond-p99-tales-from-the-long-tail/[Performance Insights Beyond P99: Tales from the Long Tail]
-* https://www.p99conf.io/[P99 CONF – All Things Performance On-Demand]
-* https://www.thoughtworks.com/radar?utm_medium=email&utm_source=marketo&utm_source=marketo&utm_medium=email&utm_campaign=techradar-vol33_2025-11&mkt_tok=MTk5LVFERS0yOTEAAAGd8ljd0kTWteLZtG8dXCXULsvJ-5qhsKEpd0nRial3_CljEMGJA_WqaKjtUa3LMkzsbp7iq9yRu0ea1IKdN5cVzvVOrc0Wz-DYTIdRjvF3ySgwkIZI[Technology Radar | Guide to technology landscape]
+* 🔥 I've loved using notebooks like Zeppelin and Jupyter for years, and several times people have recommended I look at https://docs.marimo.io/[Marimo] - https://towardsdatascience.com/why-im-making-the-switch-to-marimo-notebooks/[this article] from Parul Pandey makes such a compelling case for it I _really_ do need to take a look. Maybe a project for the quiet holiday period :)
+* https://rayforcedb.com/[RayforceDB] is a new https://github.com/singaraiona/rayforce[open-source] (MIT license) columnar database less than 1Mb in size, and written in C.
+* Lots of people were impacted by the Cloudflare outage earlier this month; what I found interesting in the https://blog.cloudflare.com/18-november-2025-outage/[excellent postmortem that they published] was that it wasn't DNS, and it _was_ related, in part, to https://blog.cloudflare.com/18-november-2025-outage/#the-query-behaviour-change[unexpected/unforeseen results from a SQL query].
+* There were some https://www.p99conf.io/[excellent talks at P99 Conf] this year, including:
+** Almog Gavra - https://www.p99conf.io/session/8x-better-than-protobuf-rethinking-serialization-for-data-pipelines/[8x Better Than Protobuf: Rethinking Serialization for Data Pipelines]
+** Tanel Poder - https://www.p99conf.io/session/xcapture-v3-efficient-always-on-thread-level-observability-with-ebpf/[xCapture v3: Efficient, Always-On Thread Level Observability with eBPF]
+** Duarte Nunes - https://www.p99conf.io/session/timeseries-storage-at-ludicrous-speed/[Timeseries Storage at Ludicrous Speed]
+** Rachel Stephens & Adrian Cockroft - https://www.p99conf.io/session/performance-insights-beyond-p99-tales-from-the-long-tail/[Performance Insights Beyond P99: Tales from the Long Tail]
+** Andy Pavlo - https://www.p99conf.io/session/chatgpt-aint-got-on-me/[ChatGPT Ain’t Got $%@& On Me!] (discussed above, but so good it's worth mentioning twice!)
+* The https://www.thoughtworks.com/radar[Thoughtworks TechRadar] was updated recently.
+I find it interesting as a snapshot of how technologies ebb and flow in their use and adoption (in the ecosystem within which Thoughtworks operates).
+I published link:/2025/11/05/tech-radar-nov-2025-data-blips/[a very short summary of the relevant data entries from the radar].
 
 == AI
-
 
 _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
