--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -12,7 +12,19 @@ categories:
 
 << TODO: add my content >>
 
+link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[Stumbling into AI: Part 6—I’ve been thinking about Agents and MCP all wrong]
+link:/2025/11/25/ai-smells-on-medium/
+link:/2025/11/06/how-we-built-the-demo-for-the-current-nola-day-2-keynote-using-flink-and-ai/
+
 <!--more-->
+
+---
+
+More links or fewer? use comments below
+
+Would you prefer to read this as an email?
+
+---
 
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
@@ -151,27 +163,37 @@ I published link:/2025/11/05/tech-radar-nov-2025-data-blips/[a very short summar
 _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
-* https://towardsdatascience.com/critical-mistakes-companies-make-when-integrating-ai-ml-into-their-processes/[Critical Mistakes Companies Make When Integrating AI/ML into Their Processes | Towards Data Science]
-* https://towardsdatascience.com/it-doesnt-need-to-be-a-chatbot/[It Doesn’t Need to Be a Chatbot | Towards Data Science]
-* https://eng.lyft.com/lyftlearn-evolution-rethinking-ml-platform-architecture-547de6c950e1[LyftLearn Evolution: Rethinking ML Platform Architecture]
-* https://medium.com/pinterest-engineering/a-decade-of-ai-platform-at-pinterest-4e3b37c0f758[A Decade of AI Platform at Pinterest]
-* https://netflixtechblog.com/supercharging-the-ml-and-ai-development-experience-at-netflix-b2d5b95c63eb[Supercharging the ML and AI Development Experience at Netflix]
-* https://rmoff.net/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[Stumbling into AI: Part 6—I’ve been thinking about Agents and MCP all wrong]
-* https://simonw.substack.com/p/new-prompt-injection-papers-agents[New prompt injection papers: Agents Rule of Two and The Attacker Moves Second]
-* https://newsletter.pragmaticengineer.com/p/martin-fowler[Martin Fowler]
-* https://ai.gopubby.com/what-it-means-to-get-your-data-ready-for-ai-518861a8f025[What it means to get your data ready for AI]
-* https://lucumr.pocoo.org/2025/11/21/agents-are-hard/?utm_source=tldrai[Agent Design Is Still Hard]
-* https://www.philschmid.de/agentic-pattern#workflow-parallelization[Zero to One: Learning Agentic Patterns]
-* https://github.com/humanlayer/12-factor-agents[humanlayer/12-factor-agents: What are the principles we can use to build LLM-powered software that is actually good enough to put in the hands of production customers?]
-* https://speaking.gamov.io/RKUlRY/the-missing-protocol-how-mcp-bridges-llms-and-data-streams#sBj7RVH[The Missing Protocol: How MCP Bridges LLMs and Data Streams by Viktor Gamov]
-* https://www.distributedthoughts.org/while-everyone-demos-ai-agents-engineers-fighting-syslogs/[Two KubeCons, One Conference: While Everyone Demos AI Agents, Engineers Are Fighting With Syslogs]
-* https://www.anthropic.com/engineering/effective-context-engineering-for-ai-agents?utm_source=tldrdata[Effective context engineering for AI agents \ Anthropic]
-* https://clickhouse.com/blog/ai-first-data-warehouse?utm_source=tldrdata[How we made our internal data warehouse AI-first]
-* https://x.com/anthropicai/status/1989033795341648052?s=12[We believe this is the first documented case of a large-scale AI cyberattack executed without substantial human intervention. It has significant implications for cybersecurity in the age of AI agents.]
-* https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities]
-* https://alex-jacobs.com/posts/the-case-against-pgvector/?utm_source=hackernewsletter&utm_medium=email&utm_term=data[The Case Against pgvector | Alex Jacobs]
-* https://fly.io/blog/everyone-write-an-agent/?utm_source=tldrnewsletter[You Should Write An Agent]
-* https://craft.faire.com/we-moved-analytics-into-an-ide-and-havent-looked-back-f6e0c249cc42[We moved analytics into an IDE — and haven’t looked back]
+* David Aronchick writes about the brutal reality gap between the vendors and the folk on the ground just trying to get shit done, in this insightful article: https://www.distributedthoughts.org/while-everyone-demos-ai-agents-engineers-fighting-syslogs/[Two KubeCons, One Conference: While Everyone Demos AI Agents, Engineers Are Fighting With Syslogs]
+* Thanks to LLM, StackOverflow is dead, long live Reddit! (I am paraphrasing; you can read the full paper with all the nuances and context here: https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities])
+
+=== AI in the Enterprise
+
+* Details of AI/ML platforms from https://eng.lyft.com/lyftlearn-evolution-rethinking-ml-platform-architecture-547de6c950e1[Lyft],
+https://medium.com/pinterest-engineering/a-decade-of-ai-platform-at-pinterest-4e3b37c0f758[Pinterest],
+and https://netflixtechblog.com/supercharging-the-ml-and-ai-development-experience-at-netflix-b2d5b95c63eb[Netflix]
+* In an article that does what it says on the tin, Andrey Chubin goes through some of the https://towardsdatascience.com/critical-mistakes-companies-make-when-integrating-ai-ml-into-their-processes/[critical mistakes that companies make when integrating AI/ML into their processes].
+* Like the previous article in the list here, this one from Dr. Janna Lipenkova is a look at the _actual_ implementation of AI in a company - to the title of the article, https://towardsdatascience.com/it-doesnt-need-to-be-a-chatbot/[It Doesn’t Need to Be a Chatbot]
+
+=== Data for AI
+
+* A detailed article from Lak Lakshmanan considering https://ai.gopubby.com/what-it-means-to-get-your-data-ready-for-ai-518861a8f025[how data engineering patterns might change as we store and prepare data for use by Agents in the future].
+* Dmitry Pavlov describes https://clickhouse.com/blog/ai-first-data-warehouse[how Clickhouse made their internal data warehouse "AI-first"].
+
+=== Coding with AI
+
+* Gergely Orosz (a.k.a The Pragmatic Engineer) chatted with Martin Fowler about https://newsletter.pragmaticengineer.com/p/martin-fowler[how AI will change software engineering.]
+* AI really does open Pandora's box of new vectors for attack, which coupled with the race for development and adoption makes for a potent mix.
+Simon Willison has https://simonw.substack.com/p/new-prompt-injection-papers-agents[a good explanation of some of the prompt injection attacks].
+* Proving the above point, Anthropic have written up https://www.anthropic.com/news/disrupting-AI-espionage[details of an attack that used Agentic AI].
+
+=== Agents and MCP
+
+* 🔥 I love this practical example from Thomas Ptacek that demonstrates _what an Agent actually *is*_:  https://fly.io/blog/everyone-write-an-agent/?utm_source=tldrnewsletter[You Should Write An Agent] .
+** This is one of the articles that made me realise that link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong]
+* 🔥 https://github.com/humanlayer/12-factor-agents[12 Factor Agents] is a very practical guide from Dex Horthy (modelled on the idea of 12 Factor Apps) looking at all the practical considerations you should have when designing and productionising LLM applicaitons.
+* A useful list of https://www.philschmid.de/agentic-pattern#workflow-parallelization[Agentic Patterns] from Philipp Schmid.
+* Viktor Gamov recently did an excellent talk looking at https://speaking.gamov.io/RKUlRY/the-missing-protocol-how-mcp-bridges-llms-and-data-streams#sBj7RVH[How MCP Bridges LLMs and Data Streams]
+* What's the difference between prompt engineering and context engineering? And what _is_ context engineering and why does it matter so much? The team at Anthropic have written https://www.anthropic.com/engineering/effective-context-engineering-for-ai-agents[a good blog post] looking at these questions and more.
 
 
 == And finally…
@@ -207,12 +229,6 @@ To change slides every thirty seconds is to be rendered nearly invisible by the 
 === Watch
 
 === Nerd
-
----
-
-More links or fewer? use comments below
-
-Would you prefer to read this as an email?
 
 ---
 
