--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -9,34 +9,76 @@ categories:
 - Interesting Links
 ---
 
-
-<< TODO: add my content >>
-
-link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[Stumbling into AI: Part 6—I’ve been thinking about Agents and MCP all wrong]
-link:/2025/11/25/ai-smells-on-medium/
-link:/2025/11/06/how-we-built-the-demo-for-the-current-nola-day-2-keynote-using-flink-and-ai/
+Welcome to the 10th edition of _Interesting Links_.
+I've got over a hundred links for you this month—all of them, IMHO, interesting :)
 
 <!--more-->
 
+I'll start off by shamelessly plugging the articles that I published this month:
+
+* It turns out, link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong]. It was a bit of a 💡 for me, and if you're trying to grok wtf agents are, give it a read and let me know if it helps you.
+* link:/2025/11/25/ai-smells-on-medium/[(AI) Smells on Medium] - a proper ranty post, inspired by compiling this very newsletter. There is so much shit being published these days; a lot of it on Medium. The enshittification of the internet is real, and it makes me sad :(
+** The post got https://lobste.rs/s/2zlrjv/ai_smells_on_medium[discussed on lobste.rs] and one comment made me smile:
++
+> Ironically this article unwittingly showcases the source material for slop style grammar
++
+Have a read and see if you agree ;)
+* Details of how I helped build the demo for the link:/2025/11/06/how-we-built-the-demo-for-the-current-nola-day-2-keynote-using-flink-and-ai/[day 2 keynote at Current in New Orleans last month using Kafka, Flink, and LLMs].
+
 ---
 
-More links or fewer? use comments below
+== RFC
+
+> For you youngsters: https://www.ietf.org/process/rfcs/[Request For Comments]
+
+=== Links - too many, too few, or just right?
+
+This newsletter has grown, both in audience and number of links.
+Back in link:/2025/02/03/interesting-links-february-2025/[February] there were fewer than two dozen links.
+This month, there's nearly 150 😲.
+
+I'd love to hear from you as to whether you would like to see fewer links, or how it is now is about right.
+Also let me know if there are areas of which you want to see more (or less).
+
+Use the comment section at the end of this article to feedback, or find me on Twitter, LinkedIn, etc.
+
+=== Email?
 
 Would you prefer to read this as an email?
+If there's the appetite I'm happy to set something up, either just x-posting to Substack, or perhaps something self-hosted like ListMonk.
 
----
+Again - leave a comment below, or find me online :)
+
+== Call for Papers - Current 2026
+
+The Call for Papers for both https://app.sessionboard.com/submit/london-2026/024bead4-108f-48e5-b798-4c7d0e37b9ae[Current London] and https://app.sessionboard.com/submit/new-conference/96688713-5c0e-49d2-ad35-4049d32a5f52[Current Bengaluru] are open, closing on December 22nd.
+
+[TIP]
+====
+If you need a hand with writing your abstract, you might find these articles that I've written helpful:
+
+* link:/2022/07/20/how-to-write-a-good-tech-conference-abstract-learn-from-the-mistakes-of-others/[How to Write a Good Tech Conference Abstract - Learn from the Mistakes of Others]
+* link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game[How to win [or at least not suck\] at the conference abstract submission game]
+* link:/2022/08/31/%EF%B8%8F-writing-an-abstract-for-a-lightning-talk-%EF%B8%8F/[⚡️ Writing an abstract for a lightning talk ⚡️]
+
+And if you're speaker, check out the excellent article titled https://samharris.substack.com/p/the-silent-crowd["The Silent Crowd"] from Sam Harris which includes this important point (amongst others):
+
+> *To change slides every thirty seconds is to be rendered nearly invisible by the apparatus. Having too many images can also force you to race to the end of your talk. A final flurry of slides and apologies depresses everyone.*
+====
+
+== Anyway, On with the Links 👇
 
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 == Kafka and Event Streaming
 * A trio of articles from Zeinab Dashti about exactly-once processing in Kafka, using the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-kafka-transactions-idempotent-writes-09fe1f75bdab[Transactions], the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-outbox-pattern-f08fd640f683[Outbox Pattern], and the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-listen-to-yourself-pattern-0add785f988a[Listen-to-Yourself Pattern]
-* Another nice post from Stefan Kecskes, this time exploring https://skey.uk/post/kraft-the-kafka-raft/[what KRaft is and what the migration process looks like].
+* A nice post from Stefan Kecskes exploring https://skey.uk/post/kraft-the-kafka-raft/[what KRaft is and what the migration process looks like].
 * An interesting blog post from last year in which Andy Pearce gives https://www.andy-pearce.com/blog/posts/2024/Jun/blazingmq-introduction/[an introduction] to https://bloomberg.github.io/blazingmq/[BlazingMQ].
 * Taking a break from his hOT TaKEs about the imminent demise of Kafka, Stanislav Kozlovski shared on Reddit a https://old.reddit.com/r/apachekafka/comments/1oyljxp/the_floor_price_of_kafka_in_the_cloud/[useful comparison of the floor price of Kafka on hosted services]. Predictably, there was plenty of disagreement in the ensuing thread about the criterion used in the comparison—and this discussion in itself was useful as food for thought when making these comparisons for yourself.
 * 🔥 I love this series of posts from Geoff Williams in which he hooks up a home-built weather station to https://www.declarativesystems.com/2025/11/15/home-assistant-confluent-cloud.html[stream readings to Kafka via Home Assistant].
 * Luthra Sahil writes about building https://medium.com/@luthra.sahil.txs/scaling-email-sync-to-thousands-of-inboxes-our-kafka-powered-architecture-11dffefcef8e[an email sync platform based around Kafka].
 * A couple of interesting posts from Ian Duncan, covering https://www.iankduncan.com/engineering/2025-11-14-event-design-for-streaming-systems[Event Design for Streaming Systems] and details of https://www.iankduncan.com/engineering/2025-11-24-json-schema-demystified[JSON Schema].
-(If you struggle reading the grey-on-black text, opening it in Safari and using the Reader view works well).
+_(If you struggle reading the grey-on-black text, opening it in Safari and using the Reader view works well)._
 
 == Stream Processing
 * 🔥 Regularly featured in these roundups in recent months is Yennick Trevels, who this month brings us a very cool https://kafkastreamsfieldguide.com/tools/interactive-architecture[Interactive Kafka Streams Architecture Simulation].
@@ -49,11 +91,11 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kubernetes-with-the-operator-cb8fc9737f5b[second part] just dropped too, looking at deploying Flink with Kubernetes.
 * Three talks about Flink at this year's excellent P99Conf:
 ** https://www.p99conf.io/session/rivians-push-notification-sub-stream-with-mega-filter/[Rivian's Push Notification Sub Stream with Mega Filter]
-** https://www.p99conf.io/session/building-planet-scale-streaming-apps-proven-strategies-with-apache-flink/[Building Planet-Scale Streaming Apps: Proven Strategies with Apache Flink]
-** https://www.p99conf.io/session/apache-flink-at-scale-7x-cost-reduction-in-real-time-deduplication/[Apache Flink at Scale: 7x Cost Reduction in Real-Time Deduplication]
+** https://www.p99conf.io/session/building-planet-scale-streaming-apps-proven-strategies-with-apache-flink/[Building Planet-Scale Streaming Apps: Proven Strategies with Apache Flink] (Pinterest)
+** https://www.p99conf.io/session/apache-flink-at-scale-7x-cost-reduction-in-real-time-deduplication/[Apache Flink at Scale: 7x Cost Reduction in Real-Time Deduplication] (ShareChat)
 * Konstantinos Karavitis has an interesting post about the design pattern known as https://www.linkedin.com/pulse/applying-hexagonal-architecture-apache-flink-konstantinos-karavitis-zx6zf/["hexagonal architecture"] and its application when https://medium.com/@kkaravitis/pricing-advisor-a-practical-architecture-for-real-time-dynamic-pricing-poc-1ab1d3dc0afa[building microservices with Flink].
 * A https://blog.dataengineerthings.org/delta-join-what-even-is-that-b8306c36f1ac[summary] from Jennifer Ebe about Delta Joins, introduced into Flink in https://cwiki.apache.org/confluence/display/FLINK/FLIP-486%3A+Introduce+A+New+DeltaJoin[FLIP-486] (with support for it https://fluss.apache.org/blog/releases/0.8/#delta-join[added in Fluss 0.8]), and covered in more detail in https://www.alibabacloud.com/blog/the-delta-join-in-apache-flink-architectural-decoupling-for-hyper-scale-stream-processing_602645[this blog post] from Alibaba.
-* Rion Williams is seeking feedback from the community on his idea of a https://rion.io/2025/11/05/exploring-dynamic-sink-routing-in-apache-flink-via-demultiplexingsink/[DemultiplexingSink].
+* Rion Williams is seeking feedback from the Flink community on his idea of a https://rion.io/2025/11/05/exploring-dynamic-sink-routing-in-apache-flink-via-demultiplexingsink/[DemultiplexingSink].
 * I've written https://rmoff.net/2025/08/18/kafka-to-iceberg-exploring-the-options/#_how_many_topics_do_you_have[previously] about the challenge of streaming data from multiple sources to multiple Iceberg tables with Flink; Apple's Swapna Marru writes about how this is made easier with the new https://flink.apache.org/2025/11/11/from-stream-to-lakehouse-kafka-ingestion-with-the-flink-dynamic-iceberg-sink/[Flink Dynamic Iceberg Sink] in Iceberg 1.10.
 * Ayden Adair built a very cool Flink-powered candy bowl for Halloween, and https://www.youtube.com/watch?v=sz8aX5-l9s8[made a video] to show it off.
 
@@ -61,20 +103,20 @@ The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kub
 * Details from StarRocks of how, and why, Cisco WebEx migrated https://medium.com/starrocks-engineering/how-cisco-webex-unified-real-time-analytics-with-starrocks-32bea95aed84[from Pinot to StarRocks] for the real-time analytics.
 * A summary from Eran Stiller of Stripe's recent InfoQ talk about https://www.infoq.com/news/2025/11/stripe-zero-downtime-date-move/[migrating petabytes of data between systems with zero downtime].
 * Rene Schallner has a cool blog post about https://renerocks.ai/blog/2025-11-02--tigerfans/[using TigerBeetle to build a high-performance ticketing system].
-* Luis Medina and Ajit Koti from Netflix bring us the second part of a series about the real time distributed graph platform that they're building, and look at [https://netflixtechblog.medium.com/how-and-why-netflix-built-a-real-time-distributed-graph-part-2-building-a-scalable-storage-layer-ff4a8dbd3d1f].
+* Luis Medina and Ajit Koti from Netflix bring us https://netflixtechblog.medium.com/how-and-why-netflix-built-a-real-time-distributed-graph-part-2-building-a-scalable-storage-layer-ff4a8dbd3d1f[the second part] of a series about the real time distributed graph platform that they're building, looking in this post at the use of Cassandra for the storage layer.
 * 🔥 https://www.uber.com/blog/i-o-observability-for-ubers-massive-petabyte-scale-data-lake/[Cool stuff from the team at Uber], detailing how they instrument I/O calls from Spark and other technologies and use Kafka and Pinot to store and monitor performance of a data lake that is petabytes in size.
 * A good recap from Rahul Joshi at Capital One of the https://medium.com/capital-one-tech/understanding-the-evolution-of-data-lakes-37d13b809be9[history of data lakes through to data lakehouses], along with https://medium.com/capital-one-tech/lakehouse-format-convergence-data-interoperability-b2f8be7c1c0b[an analysis of OTFs and their perhaps-inevitable convergence].
 Pair it with https://luminousmen.com/post/data-warehouse-data-lake-data-lakehouse-data-mesh-what-they-are-and-how-they-differ/[this] from Spotify's Kirill Bobrov for a second pass at the concepts.
 * 🔥 Fascinating detail from Agoda's Save Pavanavimutti and Art Nanakorn about https://medium.com/agoda-engineering/how-agodas-multi-product-booking-engine-powers-seamless-travel-bookings-61fc6e746821[how the booking system works].
 * Nice overview from Fernando Franco of ways to https://newsletter.francofernando.com/p/scaling-the-data-storage-layer-in[scale the data storage layer in system design].
-* Gunnar Morling argues why https://www.morling.dev/blog/you-dont-need-kafka-just-use-postgres-considered-harmful/[it's more nuanced] than simply using Postgres to replace Kafka.
+* Gunnar Morling argues why it's more nuanced than simply https://www.morling.dev/blog/you-dont-need-kafka-just-use-postgres-considered-harmful/[using Postgres to replace Kafka].
 * It's not often you see someone talking about migrating _off_ DuckDB, but that's exactly what Bauplan have done—Jacopo Tagliabue explains https://www.linkedin.com/pulse/duck-hunt-moving-bauplan-from-duckdb-datafusion-bauplanlabs-5plqc/[why Bauplan moved from DuckDB to DataFusion].
 * If you like this kind of thing, Matt Turck's Machine Learning, AI & Data Landscape for 2025 has been https://mad.firstmark.com/[published] along with https://www.mattturck.com/mad2025[commentary].
 * Ananth Packkildurai has https://www.dataengineeringweekly.com/p/engineering-growth-the-data-layers[a good article] about the data systems needed to support modern "go to market" operations including marketing and sales and taking into account various privacy laws.
 
 == Data Engineering, Pipelines, and CDC
 * Is it too meta, in a list of interesting links, to link to a list of links?
-I don't care, because https://blog.dataengineerthings.org/the-awesome-list-of-resources-for-analytics-engineering-6e5759eeaa39[this list] from Faruk Tufekci of resources for analytics engineers is really useful!
+Regardless, https://blog.dataengineerthings.org/the-awesome-list-of-resources-for-analytics-engineering-6e5759eeaa39[this list] from Faruk Tufekci of resources for analytics engineers is really useful.
 * Detailed articles from Jan Zedníček looking at how to use dbt to https://janzednicek.cz/en/fabric-dbt-slowly-changing-dimension-scd-2-snapshots-and-check-strategy-in-dbt/[handle] and https://janzednicek.cz/en/fabric-dbt-how-i-build-gold-layer-dimensional-tables-scd2-in-data-projects/[implement] SCD2.
 * Cutting over from historical to realtime data in a pipeline can be a tricky problem—Nicoleta Lazar from Fresha has a nice article detailing https://medium.com/fresha-data-engineering/the-real-time-data-journey-connecting-flink-airflow-and-starrocks-7c6481660e45[how they do it with Snowflake, Flink, and Airflow].
 * I'm a fan of the Write-Audit-Publish (WAP) pattern, and enjoyed this article from Soumil Shah showing https://medium.com/@shahsoumil519/mastering-the-write-audit-publish-pattern-with-amazon-s3-tables-and-apache-iceberg-73e5eafe6b3c[how to do WAP with Amazon S3 Tables].
@@ -109,25 +151,26 @@ All the talks are recorded and available online afterwards.
 
 === Apache Iceberg
 
-* Two years ago one would have thought hell were freezing (Iceberg! freezing! geddit?!) over with https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Databricks announcing full support for Iceberg v3], but following the acquisition of Tabular and the wide adoption of Iceberg in the industry, it seems a pretty sensible move.
+* Two years ago one would have thought that Hell were freezing over (Iceberg! freezing! geddit?!) with https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Databricks announcing full support for Iceberg v3], but following the acquisition of Tabular and the wide adoption of Iceberg in the industry, it seems a pretty sensible move.
 * Two good Iceberg blogs from Jack Vanlightly this month.
-The first covers the nitty-gritty of a very real "rubber meets the road" integration question; if you're writing from Kafka to Iceberg, https://jack-vanlightly.com/blog/2025/11/5/how-would-you-like-your-iceberg-sir-stream-or-batch-ordered[how do you square the circle of choosing what kind of access to optimise the data layout] for?
+** The first covers the nitty-gritty of a very real "rubber meets the road" integration question; if you're writing from Kafka to Iceberg, https://jack-vanlightly.com/blog/2025/11/5/how-would-you-like-your-iceberg-sir-stream-or-batch-ordered[how do you square the circle of choosing what kind of access to optimise the data layout] for?
++
 (Jark Wu has an https://www.linkedin.com/posts/jarkwu_new-blog-post-how-would-you-like-your-iceberg-activity-7392227653434519552-au-Q/[interesting reply to it here].)
-In his second post he looks at the idea of https://jack-vanlightly.com/blog/2025/11/19/have-your-iceberg-cubed-not-sorted-meet-qbeast-the-otree-spatial-index[OTree Spatial Indexes for Iceberg].
+** In his second post he looks at the idea of https://jack-vanlightly.com/blog/2025/11/19/have-your-iceberg-cubed-not-sorted-meet-qbeast-the-otree-spatial-index[OTree Spatial Indexes for Iceberg].
 * Cloudera's Ayush Saxena looks at how https://medium.com/@ayushtkn/basic-variant-datatype-support-in-apache-hive-with-apache-iceberg-93c8518fcea9[Apache Hive now supports Iceberg's implementation of the Varient data type].
 * A good writeup from Manishankar Ravuri examining https://medium.com/@manishankarravuri/how-iceberg-and-delta-lake-handle-deletes-a-deep-dive-fb6fe81010fa[how deletions are handled] in different versions of the Iceberg spec, and in Delta Lake.
 * The surest sign of solid adoption of a technology is when tools supporting its use spring up in parallel to the project itself.
 Jack Leitch from Whoop has written about https://engineering.prod.whoop.com/glacierbase/[Glacierbase, which they have written to manage schemas across their PBs of Iceberg tables].
-* Marc Selwan has written https://iceberg.rest[a cool front-end for the Iceberg Catalog, `iceberg.rest`].
-* This is amazing from Snowflake (a company not originally renowned for open source work): they've open-sourced https://github.com/Snowflake-Labs/pg_lake[pg_lake] which enables you to access Iceberg tables from within Postgres.
+* 🔥 Marc Selwan has written https://iceberg.rest[a cool front-end for the Iceberg Catalog, `iceberg.rest`].
+* 🔥 This is amazing from Snowflake (a company not originally renowned for open source work): they've open-sourced https://github.com/Snowflake-Labs/pg_lake[pg_lake] which enables you to access Iceberg tables from within Postgres.
 Open source and open standards FTW!
 
 === Apache Hudi
 
 * https://hudi.apache.org/blog/2025/11/25/apache-hudi-release-1-1-announcement/[Apache Hudi 1.1] has been released, Shiyan Xu has the details.
 * Interesting summary of a talk from ad-tech company FreeWheel about https://hudi.apache.org/blog/2025/11/07/how-freewheel-uses-apache-hudi-to-power-its-data-lakehouse/[their use of Hudi], including its replacement of a Spark/Presto/Clickhouse-based Lambda architecture.
-* Onehouse are https://www.linkedin.com/posts/vinothchandar_apachehudi-xtable-opendata-share-7396231040702418944-_22f/[definitely not pivoting away from Hudi], as they launch their https://www.onehouse.ai/blog/announcing-spark-and-sql-on-the-onehouse-compute-runtime-with-quanton[faster-Spark runtime, Quanton] with claimed performance improvements for https://www.onehouse.ai/blog/apache-iceberg-on-quanton-3x-faster-apache-spark-workloads[Spark/Iceberg (wait, what?) workloads] too.
-* A nice https://hudi.apache.org/blog/2025/10/29/deep-dive-into-hudis-indexing-subsystem-part-1-of-2/[two-part] https://hudi.apache.org/blog/2025/11/12/deep-dive-into-hudis-indexing-subsystem-part-2-of-2/[deep-dive] series about indexes in Hudi.
+* Onehouse are https://www.linkedin.com/posts/vinothchandar_apachehudi-xtable-opendata-share-7396231040702418944-_22f/[pass:[<em>definitely not</em>] pivoting away from Hudi], as they launch their https://www.onehouse.ai/blog/announcing-spark-and-sql-on-the-onehouse-compute-runtime-with-quanton[faster-Spark runtime, Quanton] with claimed performance improvements for https://www.onehouse.ai/blog/apache-iceberg-on-quanton-3x-faster-apache-spark-workloads[Spark/Iceberg (wait, what?) workloads] too.
+* A nice https://hudi.apache.org/blog/2025/10/29/deep-dive-into-hudis-indexing-subsystem-part-1-of-2/[two-part] https://hudi.apache.org/blog/2025/11/12/deep-dive-into-hudis-indexing-subsystem-part-2-of-2/[deep-dive] series about indexes in Hudi from Shiyan Xu.
 
 == RDBMS
 * Vlad Bokov has a good hands-on explainer of https://medium.com/fresha-data-engineering/shrinking-me-softly-7836fdd1db76[how Fresha reduced their 4TB Postgres database on RDS by 75%].
@@ -139,9 +182,10 @@ https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim M
 * The SQL standard working group has formally accepted a change to the SQL standard to https://peter.eisentraut.org/blog/2025/11/11/waiting-for-sql-202y-group-by-all[add support for `GROUP BY ALL`].
 * https://duckdb.org/2025/11/12/announcing-duckdb-142[DuckDB 1.4.2 LTS] adds https://duckdb.org/2025/11/12/announcing-duckdb-142#iceberg-improvements[support for insert, update, and delete] statements on Iceberg tables from DuckDB.
 * 🔥 I loved https://www.p99conf.io/session/chatgpt-aint-got-on-me/[this talk from Andy Pavlo] at P99 Conf about practical research done into optimising query execution using techniques including—but not limited—to LLMs.
-* In a similar vein, Alper Çiftçi from Trendyol writes about their experience https://medium.com/trendyol-tech/ai-powered-postgresql-query-optimization-a-comprehensive-approach-a646950eb5a3[[using AI to optimise Postgres queries].
+* In a similar vein, Alper Çiftçi from Trendyol writes about their experience https://medium.com/trendyol-tech/ai-powered-postgresql-query-optimization-a-comprehensive-approach-a646950eb5a3[using AI to optimise Postgres queries].
 * Sometimes it doesn't need an LLM to figure out how to optimise your queries; Nimisha Vernekar has a good primer on https://blog.dataengineerthings.org/sql-query-optimization-modern-techniques-and-best-practices-%EF%B8%8F-32db686d235d[basic query optimisation techniques] that it would behove anyone working with SQL to understand.
-* Snowflake might have enabled access from Postgres to Iceberg with their open-source https://github.com/Snowflake-Labs/pg_lake[pg_lake] (see above), but DuckDB now has https://github.com/duckdb/pg_duckdb[pg_duckdb], with which you can use DuckDB from within Postgres and thus access not only Iceberg but the multitude of other sources and types of data that DuckDB can read.
+* 🔥 Snowflake might have enabled access from Postgres to Iceberg with their open-source https://github.com/Snowflake-Labs/pg_lake[pg_lake] (see above), but DuckDB now has https://github.com/duckdb/pg_duckdb[pg_duckdb], with which you can use DuckDB from within Postgres and thus access not only Iceberg but the multitude of other sources and types of data that DuckDB can read.
++
 What a time to be alive in the data world 😁
 
 == General Data Stuff
@@ -157,26 +201,27 @@ What a time to be alive in the data world 😁
 * The https://www.thoughtworks.com/radar[Thoughtworks TechRadar] was updated recently.
 I find it interesting as a snapshot of how technologies ebb and flow in their use and adoption (in the ecosystem within which Thoughtworks operates).
 I published link:/2025/11/05/tech-radar-nov-2025-data-blips/[a very short summary of the relevant data entries from the radar].
+* Did you know that https://jyu.dev/blog/why-dev-null-is-an-acid-compliant-database/[`/dev/null` is an ACID compliant database]? ;)
 
 == AI
 
 _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
-* David Aronchick writes about the brutal reality gap between the vendors and the folk on the ground just trying to get shit done, in this insightful article: https://www.distributedthoughts.org/while-everyone-demos-ai-agents-engineers-fighting-syslogs/[Two KubeCons, One Conference: While Everyone Demos AI Agents, Engineers Are Fighting With Syslogs]
-* Thanks to LLM, StackOverflow is dead, long live Reddit! (I am paraphrasing; you can read the full paper with all the nuances and context here: https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities])
+* 🔥 David Aronchick writes about the brutal reality gap between the vendors and the folk on the ground just trying to get shit done, in this insightful article: https://www.distributedthoughts.org/while-everyone-demos-ai-agents-engineers-fighting-syslogs/[Two KubeCons, One Conference: While Everyone Demos AI Agents, Engineers Are Fighting With Syslogs]
+* Thanks to LLMs, *StackOverflow is dead, long live Reddit!* (_I am paraphrasing; you can read the full paper with all the nuances and context here_: https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities])
 
 === AI in the Enterprise
 
 * Details of AI/ML platforms from https://eng.lyft.com/lyftlearn-evolution-rethinking-ml-platform-architecture-547de6c950e1[Lyft],
 https://medium.com/pinterest-engineering/a-decade-of-ai-platform-at-pinterest-4e3b37c0f758[Pinterest],
-and https://netflixtechblog.com/supercharging-the-ml-and-ai-development-experience-at-netflix-b2d5b95c63eb[Netflix]
+and https://netflixtechblog.com/supercharging-the-ml-and-ai-development-experience-at-netflix-b2d5b95c63eb[Netflix].
 * In an article that does what it says on the tin, Andrey Chubin goes through some of the https://towardsdatascience.com/critical-mistakes-companies-make-when-integrating-ai-ml-into-their-processes/[critical mistakes that companies make when integrating AI/ML into their processes].
 * Like the previous article in the list here, this one from Dr. Janna Lipenkova is a look at the _actual_ implementation of AI in a company - to the title of the article, https://towardsdatascience.com/it-doesnt-need-to-be-a-chatbot/[It Doesn’t Need to Be a Chatbot]
 
 === Data for AI
 
-* A detailed article from Lak Lakshmanan considering https://ai.gopubby.com/what-it-means-to-get-your-data-ready-for-ai-518861a8f025[how data engineering patterns might change as we store and prepare data for use by Agents in the future].
+* 🔥 A detailed article from Lak Lakshmanan considering https://ai.gopubby.com/what-it-means-to-get-your-data-ready-for-ai-518861a8f025[how data engineering patterns might change as we store and prepare data for use by Agents in the future].
 * Dmitry Pavlov describes https://clickhouse.com/blog/ai-first-data-warehouse[how Clickhouse made their internal data warehouse "AI-first"].
 
 === Coding with AI
@@ -188,8 +233,8 @@ Simon Willison has https://simonw.substack.com/p/new-prompt-injection-papers-age
 
 === Agents and MCP
 
-* 🔥 I love this practical example from Thomas Ptacek that demonstrates _what an Agent actually *is*_:  https://fly.io/blog/everyone-write-an-agent/?utm_source=tldrnewsletter[You Should Write An Agent] .
-** This is one of the articles that made me realise that link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong]
+* 🔥 I love this practical example from Thomas Ptacek that demonstrates _what an Agent actually **is**_ :  https://fly.io/blog/everyone-write-an-agent/?utm_source=tldrnewsletter[You Should Write An Agent] .
+** This is one of the articles that made me realise that link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong].
 * 🔥 https://github.com/humanlayer/12-factor-agents[12 Factor Agents] is a very practical guide from Dex Horthy (modelled on the idea of 12 Factor Apps) looking at all the practical considerations you should have when designing and productionising LLM applicaitons.
 * A useful list of https://www.philschmid.de/agentic-pattern#workflow-parallelization[Agentic Patterns] from Philipp Schmid.
 * Viktor Gamov recently did an excellent talk looking at https://speaking.gamov.io/RKUlRY/the-missing-protocol-how-mcp-bridges-llms-and-data-streams#sBj7RVH[How MCP Bridges LLMs and Data Streams]
@@ -200,35 +245,24 @@ Simon Willison has https://simonw.substack.com/p/new-prompt-injection-papers-age
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
-* https://listmonk.app/docs/[listmonk / Documentation]
-* https://current.confluent.io/bengaluru[Current | Bengaluru 2026]
-* https://current.confluent.io/london[Current | London 2026]
-* https://rmoff.net/2022/08/31/%EF%B8%8F-writing-an-abstract-for-a-lightning-talk-%EF%B8%8F/[⚡️ Writing an abstract for a lightning talk ⚡️]
-* https://rmoff.net/2022/07/20/how-to-write-a-good-tech-conference-abstract-learn-from-the-mistakes-of-others/[How to Write a Good Tech Conference Abstract - Learn from the Mistakes of Others]
-* https://ficd.sh/blog/your-project-sucks/[your project fucking sucks]
-* https://wildingout.substack.com/p/12-things-ive-heard-boomers-say-that[12 Things I’ve Heard Boomers Say That I Agree With 100%]
-* https://andreacanton.dev/posts/2025-11-08-always-ready-to-leave/?utm_source=hackernewsletter&utm_medium=email&utm_term=working[Always Be Ready to Leave (Even If You Never Do) ~ Andrea Canton]
-* https://newsletter.posthog.com/p/collaboration-sucks?utm_source=hackernewsletter&utm_medium=email&utm_term=fav[Collaboration sucks]
-* https://modernleader.is/posts/invisible-gun[You might be carrying an invisible gun]
-* https://blog.shashanktomar.com/posts/strange-attractors?utm_source=hackernewsletter&utm_medium=email&utm_term=show_hn[Strange Attractors | Shashank Tomar]
-* https://samharris.substack.com/p/the-silent-crowd?utm_source=post-email-title&publication_id=471923&post_id=177816406&utm_campaign=email-post-title&isFreemail=false&r=58pa39&triedRedirect=true&utm_medium=email[The Silent Crowd]
-+
---
-To change slides every thirty seconds is to be rendered nearly invisible by the apparatus. Having too many images can also force you to race to the end of your talk. A final flurry of slides and apologies depresses everyone.
---
-* https://www.counting-stuff.com/counting-the-planes-overhead/[Counting the planes overhead]
-* https://www.lambdaops.com/posts/rm-rf-remains?utm_source=tldrnewsletter[rm -rf remains | LambdaOps]
-* https://saxrag.com/tech/reversing/2025/06/01/BAWiFi.html[Unlocking free WiFi on British Airways]
-* https://jyu.dev/blog/why-dev-null-is-an-acid-compliant-database/?utm_source=hackernewsletter&utm_medium=email&utm_term=data[Why /dev/null Is an ACID Compliant Database]
-* https://rmoff.net/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game[How to win [or at least not suck] at the conference abstract submission game]
-
 === Think
+* 🔥 The more senior you become in your career, the more you need to be aware of the sometimes-intended power of your words.
+Kelly Vaughn explains why in this article https://modernleader.is/posts/invisible-gun[You might be carrying an invisible gun]
+* PostHog's Charles Cook argues that https://newsletter.posthog.com/p/collaboration-sucks[Collaboration sucks]
+* Practical advice from Andrea Canton: https://andreacanton.dev/posts/2025-11-08-always-ready-to-leave[Always Be Ready to Leave (Even If You Never Do)]
 
-=== Tool
+=== Rant
+* 🔥Daniel Fichtinger on why https://ficd.sh/blog/your-project-sucks/[your project fucking sucks] (_why FOSS needs gardeners, not influencers_).
+* Robin Wilding - https://wildingout.substack.com/p/12-things-ive-heard-boomers-say-that[12 Things I’ve Heard Boomers Say That I Agree With 100%]
+* Me - link:/2025/11/25/ai-smells-on-medium/[(AI) Smells on Medium]
 
 === Watch
+* Shashank Tomar - https://blog.shashanktomar.com/posts/strange-attractors[Strange Attractors]
 
 === Nerd
+* Very cool look at ADS-B from Randy Au - https://www.counting-stuff.com/counting-the-planes-overhead/[Counting the planes overhead].
+* What happens when you run `rm -rf /`? Kyle Kelley https://www.lambdaops.com/posts/rm-rf-remains[found out].
+* 🔥 I love the persistence that Raghu Saxena shows in this article looking at https://saxrag.com/tech/reversing/2025/06/01/BAWiFi.html[how WiFi is secured on British Airways flights].
 
 ---
 
@@ -237,3 +271,13 @@ To change slides every thirty seconds is to be rendered nearly invisible by the 
 * If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
 * If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
+
+---
+
+== Just a reminder - leave a comment 👇
+
+* Would like to see fewer links in this monthly newsletter, or how it is now is about right?
+* Are there any areas of which you want to see more (or less).
+* Would you prefer to read this as an email?
+
+Leave a comment below, or find me online :)
